[package]
name = "squads-multisig-program"
version = "2.0.0"
description = "Squads Multisig Program V4"
edition = "2021"
license-file = "../../LICENSE"

[lib]
crate-type = ["cdylib", "lib"]
name = "squads_multisig_program"

[features]
default = ["custom-heap", "idl-build"]
custom-heap = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
testing = []
idl-build = ["anchor-lang/idl-build", "light-sdk/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "=0.29.0", features = ["allow-missing-optionals"] }
anchor-spl = { version="=0.29.0", features=["token"] }
light-hasher = "1.1.0"
light-sdk = "0.11.0"
light-utils = "1.1.0"
solana-program = "=1.18.22"
solana-security-txt = "1.1.1"
